доделал profile, начал верстать vacancy - надо btn--green

--- a/src/pug/sections/_main-profile.pug
+++ b/src/pug/sections/_main-profile.pug
@@ -5,3 +5,4 @@ section.main
     include ./_science-work
     include ./_outstudy-work
     include ./_international-work
+    include ./_similar-profiles
