--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,3 +55,8 @@
 @import "blocks/international-work";
 @import "blocks/progress-bar";
 @import "blocks/table";
+@import "blocks/accordeon";
+@import "blocks/similar-profiles";
+
+//vacancy
+@import "blocks/vacancy";
