--- a/src/pug/sections/_international-work.pug
+++ b/src/pug/sections/_international-work.pug
@@ -1,10 +1,81 @@
-section.international-work
-    .international-work__header
-        h2.international-work__title Международная деятельность
+mixin table
+    table.table-scroll
+        thead
+            tr
+                th.table-scroll__title Наименование учебной дисциплины
+                th.table-scroll__title Учебный год
+                th.table-scroll__title Оценка
+                th.table-scroll__title Письменная работа
+        tbody.body-half-screen
+            tr
+                td(colspan='4').table-scroll__divider 1 семестр
+            tr
+                td.table-scroll__cell Музыкально-исполнительские школы и концепции
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Хорошо
+                td.table-scroll__cell Отсутствует
+            tr
+                td.table-scroll__cell Иностранный язык
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td(colspan='4').table-scroll__divider 2 семестр
+            tr
+                td.table-scroll__cell Русский язык и культура речи
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Хорошо
+                td.table-scroll__cell Отсутствует
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td(colspan='4').table-scroll__divider 3 семестр
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td(colspan='4').table-scroll__divider 4 семестр
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+
+section.activity-work
+    .activity-work__header
+        h2.activity-work__title Международная деятельность
         span.divider
-        .international-work__progress
+        .activity-work__progress
             .progress
                 .progress-bar(data-progress='16')
             .progress-info
-    .international-work__container
+    .activity-work__container
+        .activity-work__section.accordeon-section
+            p.activity-work__section-title Владение иностранными языками
+                span.activity-work__section-count 1
+            button.activity-work__section-button.accordeon-button
+            .activity-work__table-container.accordeon-container
+                +table
 
+    .activity-work__container.activity-work__container
+        .activity-work__section
+            p.activity-work__section-title Участие в международных образовательных программам вне основных профессиональных образовательных программ
+                span.activity-work__section-count 1
+            button.activity-work__section-button.accordeon-button
+            .activity-work__table-container.accordeon-container
+                +table
