--- a/src/pug/sections/_study-work.pug
+++ b/src/pug/sections/_study-work.pug
@@ -1,61 +1,102 @@
-section.study-work
-    .study-work__header
-        h2.study-work__title Учебная работа
+mixin table
+    table.table-scroll
+        thead
+            tr
+                th.table-scroll__title Наименование учебной дисциплины
+                th.table-scroll__title Учебный год
+                th.table-scroll__title Оценка
+                th.table-scroll__title Письменная работа
+        tbody.body-half-screen
+            tr
+                td(colspan='4').table-scroll__divider 1 семестр
+            tr
+                td.table-scroll__cell Музыкально-исполнительские школы и концепции
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Хорошо
+                td.table-scroll__cell Отсутствует
+            tr
+                td.table-scroll__cell Иностранный язык
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td(colspan='4').table-scroll__divider 2 семестр
+            tr
+                td.table-scroll__cell Русский язык и культура речи
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Хорошо
+                td.table-scroll__cell Отсутствует
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td(colspan='4').table-scroll__divider 3 семестр
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td(colspan='4').table-scroll__divider 4 семестр
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell: a(href="#") Открыть
+
+section.activity-work
+    .activity-work__header
+        h2.activity-work__title Учебная работа
         span.divider
-        .study-work__progress
+        .activity-work__progress
             .progress
                 .progress-bar(data-progress='75')
             .progress-info
-    .study-work__container.study-work__container--active
-        .study-work__section
-            p.study-work__section-title Результаты учебной деятельности
-                span.study-work__section-count 4
-            button.study-work__section-button.accordeon-button.accordeon-button--active
+    .activity-work__container
+        .activity-work__section.accordeon-section
+            p.activity-work__section-title Результаты учебной деятельности
+                span.activity-work__section-count 4
+            button.activity-work__section-button.accordeon-button
+            .activity-work__table-container.accordeon-container
+                +table
 
-        table.study-work__table.table.table--active
-            tbody
-                tr
-                    th.table__title Наименование учебной дисциплины
-                    th.table__title Учебный год
-                    th.table__title Оценка
-                    th.table__title Письменная работа
-                tr
-                    td(colspan='4').table__separator 1 семестр
-                tr
-                    td Музыкально-исполнительские школы и концепции
-                    td 1 семестр,Осенний(1 курс)
-                    td Хорошо
-                    td Отстуствует
-                tr
-                    td Иностранный язык
-                    td 1 семестр,Осенний(1 курс)
-                    td Зачтено
-                    td Открыть
-                tr
-                    td(colspan='4').table__separator 2 семестр
-                tr
-                    td Русский язык и культура речи
-                    td 1 семестр,Осенний(1 курс)
-                    td Хорошо
-                    td Отсутствует
-                tr
-                    td Теория и история музыкального искусства
-                    td 1 семестр,Осенний(1 курс)
-                    td Зачтено
-                    td Открыть
-    .study-work__container.study-work__container
-        .study-work__section
-            p.study-work__section-title Результаты учебной деятельности
-                span.study-work__section-count 4
-            button.study-work__section-button.accordeon-button
-    .study-work__container
-        .study-work__section
-            p.study-work__section-title Результаты учебной деятельности
-                span.study-work__section-count 4
-            button.study-work__section-button.accordeon-button
-    .study-work__container
-        .study-work__section
-            p.study-work__section-title Результаты учебной деятельности
-                span.study-work__section-count 4
-            button.study-work__section-button.accordeon-button
-
+    .activity-work__container.activity-work__container
+        .activity-work__section
+            p.activity-work__section-title Практика обучающегося
+                span.activity-work__section-count 2
+            button.activity-work__section-button.accordeon-button
+            .activity-work__table-container.accordeon-container
+                +table
+    .activity-work__container
+        .activity-work__section
+            p.activity-work__section-title Стажировки
+                span.activity-work__section-count 10
+            button.activity-work__section-button.accordeon-button
+            .activity-work__table-container.accordeon-container
+                +table
+    .activity-work__container
+        .activity-work__section
+            p.activity-work__section-title Участие в мероприятиях
+                span.activity-work__section-count 3
+            button.activity-work__section-button.accordeon-button
+            .activity-work__table-container.accordeon-container
+                +table
+    .activity-work__container
+        .activity-work__section
+            p.activity-work__section-title Дополнительное образование
+                span.activity-work__section-count 1
+            button.activity-work__section-button.accordeon-button
+            .activity-work__table-container.accordeon-container
+                +table
