--- a/src/scss/blocks/_table.scss
+++ b/src/scss/blocks/_table.scss
@@ -1,30 +1,73 @@
-table{
-  width: 96%;
-  border-collapse:collapse;
-  border-spacing:0;
-  height: auto;
+.table-scroll {
+  max-width: 1300px;
+  display: block;
+  empty-cells: show;
   margin: 0 auto;
-}
-table,table td, table .table__title {
-  border: 1px solid transparent;
-}
-table td,table .table__title {
-  padding: 17px 12px;
-  width: 30px;
-  height: 35px;
-}
-table .table__title {
-  background: #F1F4F9;
-  color: #444;
-  font-weight: 600;
-  text-align: left;
+
+  border-spacing: 0;
+  border: none;
 }
 
-.table__separator {
-  font-style: normal;
+.table-scroll thead {
+  background: #f1f4f9;
+  position: relative;
+  display: block;
+  width: 100%;
+  overflow-y: hidden;
+  margin-bottom: 19px;
+}
+
+.table-scroll tbody {
+  /* Position */
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 50vh;
+  overflow-y: scroll;
+  padding-right: 7px;
+}
+
+.table-scroll tr {
+  width: 100%;
+  display: flex;
+  margin: 9px 0;
+}
+
+.table-scroll th,
+td {
+  flex-basis: 100%;
+  display: block;
+  text-align: left;
+  &:first-child {
+    min-width: 440px;
+  }
+}
+
+.table-scroll td {
+  border-bottom: 1px solid #F1F4F9;
+}
+
+/* Other options */
+
+.table-scroll__cell {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 12px;
+}
+
+.table-scroll__title {
+  padding: 17px 0 16px 12px;
+  font-size: rem-calc(16);
+  line-height: 26px;
+}
+
+.table-scroll__divider {
   font-weight: 600;
-  font-size: 20px;
+  font-size: rem-calc(20);
   line-height: 24px;
-  color: #3464E0;
+  color: #3464e0;
   text-align: center;
+  width: 100%;
+  padding-bottom: 18px;
+  border-bottom: 1px solid #F1F4F9;
 }
