--- a/src/scss/general/btn.scss
+++ b/src/scss/general/btn.scss
@@ -75,13 +75,13 @@
 .accordeon-button {
   @include btn-reset;
   position: absolute;
-  right: 27px;
   top: 50%;
   transform: translateY(-50%);
   width: 17px;
   height: 1px;
   background: #C3CAD6;
   transition: .2s;
+  right: 27px;
   &::after {
     content: '';
     display: block;
@@ -89,14 +89,15 @@
     width: 17px;
     height: 1px;
     background:  #C3CAD6;
-    transform:translateY(-50%) rotate(90deg) ;
+    transform:translateY(-50%) rotate(90deg);
   }
   &--active {
     background-color: #3464E0;
     width: 31px;
     height: 31px;
     border-radius: 50%;
-    transform: translateY(-50%);
+    transform: translate(50%, -50%);
+    right: 35px;
     &::after {
       transform: rotate(45deg);
       right: 7px;
