--- a/src/pug/sections/_science-work.pug
+++ b/src/pug/sections/_science-work.pug
@@ -66,7 +66,7 @@ section.activity-work
             .progress-info
     .activity-work__container
         .activity-work__section.accordeon-section
-            p.activity-work__section-title Научные публикации
+            p.activity-work__section-title.accordeon-title Научные публикации
                 span.activity-work__section-count 4
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
@@ -74,7 +74,7 @@ section.activity-work
 
     .activity-work__container.activity-work__container
         .activity-work__section
-            p.activity-work__section-title Участие в выполнении НИОКР
+            p.activity-work__section-title.accordeon-title Участие в выполнении НИОКР
                 span.activity-work__section-count 2
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
