--- a/src/pug/sections/_study-work.pug
+++ b/src/pug/sections/_study-work.pug
@@ -66,7 +66,7 @@ section.activity-work
             .progress-info
     .activity-work__container
         .activity-work__section.accordeon-section
-            p.activity-work__section-title Результаты учебной деятельности
+            p.activity-work__section-title.accordeon-title Результаты учебной деятельности
                 span.activity-work__section-count 4
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
@@ -74,28 +74,28 @@ section.activity-work
 
     .activity-work__container.activity-work__container
         .activity-work__section
-            p.activity-work__section-title Практика обучающегося
+            p.activity-work__section-title.accordeon-title Практика обучающегося
                 span.activity-work__section-count 2
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
                 +table
     .activity-work__container
         .activity-work__section
-            p.activity-work__section-title Стажировки
+            p.activity-work__section-title.accordeon-title Стажировки
                 span.activity-work__section-count 10
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
                 +table
     .activity-work__container
         .activity-work__section
-            p.activity-work__section-title Участие в мероприятиях
+            p.activity-work__section-title.accordeon-title Участие в мероприятиях
                 span.activity-work__section-count 3
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
                 +table
     .activity-work__container
         .activity-work__section
-            p.activity-work__section-title Дополнительное образование
+            p.activity-work__section-title.accordeon-title Дополнительное образование
                 span.activity-work__section-count 1
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
