--- a/src/scss/blocks/_enter.scss
+++ b/src/scss/blocks/_enter.scss
@@ -4,6 +4,9 @@
   @media (min-width: $mobile) {
     display: block;
   }
+  @media (min-width: $tablet) {
+    margin-bottom: 66px;
+  }
 }
 
 .enter__wrapper {
