--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -15,9 +15,9 @@ header.page-header.js-header
                 div#nav
                     ul.page-header__menu-list
                         li.page-header__menu-item
-                            a.js-menu-link(href="#") Вакансии
+                            a.js-menu-link(href="vacancy.html") Вакансии
                         li.page-header__menu-item
-                            a.js-menu-link(href="#") Портфолио студентов
+                            a.js-menu-link(href="digital-portfolio.html") Портфолио студентов
                         li.page-header__menu-item.page-header__menu--exit
                             a.js-menu-link.page-header__menu-link--exit(href="#") Завершить сеанс
 
