--- a/src/pug/sections/_international-work.pug
+++ b/src/pug/sections/_international-work.pug
@@ -66,7 +66,7 @@ section.activity-work
             .progress-info
     .activity-work__container
         .activity-work__section.accordeon-section
-            p.activity-work__section-title Владение иностранными языками
+            p.activity-work__section-title.accordeon-title Владение иностранными языками
                 span.activity-work__section-count 1
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
@@ -74,7 +74,7 @@ section.activity-work
 
     .activity-work__container.activity-work__container
         .activity-work__section
-            p.activity-work__section-title Участие в международных образовательных программам вне основных профессиональных образовательных программ
+            p.activity-work__section-title.accordeon-title Участие в международных образовательных программам вне основных профессиональных образовательных программ
                 span.activity-work__section-count 1
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
