--- a/src/pug/sections/_outstudy-work.pug
+++ b/src/pug/sections/_outstudy-work.pug
@@ -66,7 +66,7 @@ section.activity-work
             .progress-info
     .activity-work__container
         .activity-work__section.accordeon-section
-            p.activity-work__section-title Членство в общественных организациях
+            p.activity-work__section-title.accordeon-title Членство в общественных организациях
                 span.activity-work__section-count 4
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
@@ -74,7 +74,7 @@ section.activity-work
 
     .activity-work__container
         .activity-work__section
-            p.activity-work__section-title Спортивные достижения
+            p.activity-work__section-title.accordeon-title Спортивные достижения
                 span.activity-work__section-count 2
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
@@ -82,14 +82,14 @@ section.activity-work
 
     .activity-work__container
         .activity-work__section
-            p.activity-work__section-title  Участие в творческих коллективах
+            p.activity-work__section-title.accordeon-title  Участие в творческих коллективах
                 span.activity-work__section-count 2
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
                 +table
     .activity-work__container
         .activity-work__section
-            p.activity-work__section-title Творческие достижения
+            p.activity-work__section-title.accordeon-title Творческие достижения
                 span.activity-work__section-count 2
             button.activity-work__section-button.accordeon-button
             .activity-work__table-container.accordeon-container
