--- a/src/scss/blocks/_block-content.scss
+++ b/src/scss/blocks/_block-content.scss
@@ -4,7 +4,6 @@
   font-size: 20px;
   line-height: 26px;
   color: #C3CAD6;
-
   margin: 33px 0 23px 0;
 }
 
@@ -22,5 +21,75 @@
   }
   &:first-child {
     padding-top: 0;
+  }
+}
+
+.block__content-news {
+  min-width: 300px  ;
+}
+
+
+.block__content {
+  color: inherit;
+  display: block;
+  width: 100%;
+  z-index: 10;
+  height: 100%;
+  &--aside {
+    display: flex;
+    width: 100%;
+    height: 21%;
+    @media (min-width: $tablet) {
+      flex-direction: column;
+      align-items: flex-end;
+    }
+  }
+  &--hot {
+    &::after {
+      content: 'Важно';
+      font-size: 14px;
+      line-height: 26px;
+      color: #FFFFFF;
+      padding: 2px 11px;
+      background: $c-green;
+      border-radius: 2px;
+      position: absolute;
+      top: 25px;
+      right: 17px;
+    }
+  }
+}
+
+.block--wide {
+  background: #3464e0;
+  box-sizing: border-box;
+  overflow: hidden;
+  @media (min-width: $mobile) {
+    width: 545px;
+  }
+  .slider__item-descr {
+    display: none;
+    @media (min-width: $tablet) {
+      display: block;
+      width: 400px;
+    }
+  }
+}
+
+.block--medium {
+  background: #fff;
+  width: 100%;
+  box-sizing: border-box;
+  color: #6E7781;
+  @media (min-width: $mobile) {
+    width: 430px;
+  }
+}
+
+.block--narrow {
+  background: #fff;
+  box-sizing: border-box;
+  @media (min-width: $mobile) {
+    width: 420px;
   }
 }
