--- a/src/scss/general/mixins.scss
+++ b/src/scss/general/mixins.scss
@@ -136,7 +136,7 @@
 
 @mixin title-aside {
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
   line-height: 18px;
   color: #444444;
@@ -182,6 +182,7 @@
   @media (min-width: $tablet) {
     margin-bottom: 2px;
     background-color: #fff;
-    padding: 0 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
