--- a/src/scss/general/variables.scss
+++ b/src/scss/general/variables.scss
@@ -3,6 +3,8 @@ $c-blue-background: linear-gradient(90deg, #3464e0 0%, #2955c9 100%);
 $c-blue: rgba(52, 100, 224, 1);
 $c-link: #9cbaf0;
 $c-grey: #f1f4f9;
+$c-green: #2BC584;
+$c-red: #E06364;
 
 $font: "Russia", "Arial", sans-serif;
 $font-alt: "Radical", "Arial", sans-serif;
