Пробуем подход примесей - надо переделать основные страницы, задача на Пт

--- a/src/pug/sections/_announcement.pug
+++ b/src/pug/sections/_announcement.pug
@@ -1,5 +1,6 @@
 .announcement
-    .announcement__container
-        p.announcement__text
-            | ⚡️ Объявлен прием заявлений на заселение в общежития. Успей подать заявление в 
-            a(href="#") разделе услуг.
+    .announcement__container.container
+        .announcement__wrapper
+            p.announcement__text
+                | ⚡️ Объявлен прием заявлений на заселение в общежития. Успей подать заявление в 
+                a(href="#") разделе услуг.
