--- a/src/pug/sections/_classmates.pug
+++ b/src/pug/sections/_classmates.pug
@@ -1,10 +1,11 @@
 section.classmates
-    .classmates__container
-        h2.classmates__title Одногруппники
+    .classmates__container.container
         .classmates__wrapper
-            +user('Ивко Валентина Петросовна', '23 февраля', 'avatar-1.jpg', 'avatar-1.webp', '#')
-            +user('Цепко Харитон Викторович', '24 августа', 'avatar-2.jpg', 'avatar-2.webp', '#')
-            +user('Лобкова Ольга Федоровна', '25 мая', 'avatar-3.jpg', 'avatar-3.webp', '#')
-            +user('Ивко Валентина Петросовна', '23 февраля', 'avatar-1.jpg', 'avatar-1.webp', '#')
-            +user('Цепко Харитон Викторович', '24 августа', 'avatar-2.jpg', 'avatar-2.webp', '#')
-            +user('Лобкова Ольга Федоровна', '25 мая', 'avatar-3.jpg', 'avatar-3.webp', '#')
+            h2.classmates__title.title Одногруппники
+            .classmates__list
+                +user('Ивко Валентина Петросовна', '23 февраля', 'avatar-1.jpg', 'avatar-1.webp', '#')
+                +user('Цепко Харитон Викторович', '24 августа', 'avatar-2.jpg', 'avatar-2.webp', '#')
+                +user('Лобкова Ольга Федоровна', '25 мая', 'avatar-3.jpg', 'avatar-3.webp', '#')
+                +user('Ивко Валентина Петросовна', '23 февраля', 'avatar-1.jpg', 'avatar-1.webp', '#')
+                +user('Цепко Харитон Викторович', '24 августа', 'avatar-2.jpg', 'avatar-2.webp', '#')
+                +user('Лобкова Ольга Федоровна', '25 мая', 'avatar-3.jpg', 'avatar-3.webp', '#')
