--- a/src/pug/sections/_info.pug
+++ b/src/pug/sections/_info.pug
@@ -1,8 +1,8 @@
-section.info-container.swiper-container
+section.info-container.swiper-container.container
     .info__wrapper.swiper-wrapper
         .info__card-block.swiper-slide
             article.info__card-stack.info__card--schedule
-                h4.info__card-title Расписание
+                h4.info__card-title.title Расписание
                 p.info__card-week
                 p.info__card-main.info__card-time
                 p.info__card-sub.info__card-date
@@ -10,14 +10,14 @@ section.info-container.swiper-container
 
         .info__card-block.swiper-slide
             article.info__card-stack.info__card--cv
-                h4.info__card-title Портфолио
+                h4.info__card-title.title Портфолио
                 p.info__card-main.info__card-fellow <span>10 657</span>
                 p.info__card-sub Высококвалифицированных специалиста
                 a(href="#").info__card-about.btn Подробнее
 
         .info__card-block.swiper-slide
             article.info__card-stack.info__card--vacancy
-                h4.info__card-title Вакансии
+                h4.info__card-title.title Вакансии
                 p.info__card-main.info__card-workers <span>34</span>
                 p.info__card-sub Вакансии для студентов университета
                 a(href="#").info__card-about.btn Подробнее
