--- a/src/pug/sections/_main-vacancy.pug
+++ b/src/pug/sections/_main-vacancy.pug
@@ -28,34 +28,34 @@ mixin vacancy
         a(href="#").vacancy__button.btn--green Откликнуться
 
 section.vacancy
-    .vacancy__container
+    .vacancy__container.container
         .vacancy__header
-            h2.vacancy__title Открытые вакансии портала
+            h2.vacancy__title.title--large Открытые вакансии портала
             a(href="#").vacancy__question Хотите разместить вакансию?
         .vacancy__content
             .vacancy__wrapper
                 .vacancy__section.accordeon-section
-                    p.vacancy__section-title.accordeon-title Агент по корпоративным продажам
+                    p.vacancy__section-title.accordeon-title.title--main Агент по корпоративным продажам
                     button.vacancy-button.accordeon-button
                     .vacancy-container.accordeon-container
                         +vacancy
                 .vacancy__section.accordeon-section
-                    p.vacancy__section-title.accordeon-title Делопроизводитель в архиве
+                    p.vacancy__section-title.accordeon-title.title--main Делопроизводитель в архиве
                     button.vacancy-button.accordeon-button
                     .vacancy-container.accordeon-container
                         +vacancy
                 .vacancy__section.accordeon-section
-                    p.vacancy__section-title.accordeon-title Сотрудник деканата
+                    p.vacancy__section-title.accordeon-title.title--main Сотрудник деканата
                     button.vacancy-button.accordeon-button
                     .vacancy-container.accordeon-container
                         +vacancy
                 .vacancy__section.accordeon-section
-                    p.vacancy__section-title.vacancy__section-title--hot.accordeon-title Оператор контактного центра
+                    p.vacancy__section-title.vacancy__section-title--hot.accordeon-title.title--main Оператор контактного центра
                     button.vacancy-button.accordeon-button
                     .vacancy-container.accordeon-container
                         +vacancy
                 .vacancy__section.accordeon-section
-                    p.vacancy__section-title.accordeon-title Сотрудник службы приёма и размещения в общежитии
+                    p.vacancy__section-title.accordeon-title.title--main Сотрудник службы приёма и размещения в общежитии
                     button.vacancy-button.accordeon-button
                     .vacancy-container.accordeon-container
                         +vacancy
