--- a/src/pug/sections/_portfolio-cards.pug
+++ b/src/pug/sections/_portfolio-cards.pug
@@ -1,7 +1,7 @@
 section.portfolio-cards
-    .portfolio-cards__container
+    .portfolio-cards__container.container
         .portfolio-cards__header
-            h2.portfolio-cards__title Цифровое портфолио обучающегося
+            h2.portfolio-cards__title.title--large Цифровое портфолио обучающегося
             span.portfolio-cards__counter 10 456
         .portfolio-cards__wrapper
             +portfolio-card('card-avatar-1.webp', 'card-avatar-1.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75')
