--- a/src/pug/sections/_services.pug
+++ b/src/pug/sections/_services.pug
@@ -1,6 +1,6 @@
 section.services
     .services__header
-        h2.services__title Популярные услуги
+        h2.services__title.title--main Популярные услуги
         span.divider
     .services__container.swiper-container
         .services__wrapper.swiper-wrapper
