--- a/src/scss/blocks/_announcement.scss
+++ b/src/scss/blocks/_announcement.scss
@@ -1,9 +1,8 @@
 .announcement {
-  @include container;
   margin-bottom: 47px;
 }
 
-.announcement__container {
+.announcement__wrapper {
   @include card;
   overflow: hidden;
 }
