--- a/src/scss/blocks/_study-work.scss
+++ b/src/scss/blocks/_study-work.scss
@@ -1,8 +1,4 @@
-.activity-work {
-  @include container;
-}
-
-.activity-work__container {
+.activity-work__wrapper {
   position: relative;
   &--active  {
     background-color: #fff;
