--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,11 @@
+@import "general/rem-calc";
 @import "general/variables.scss";
 @import "vendor/normalize.scss";
 @import "vendor/swiper.scss";
 @import "general/mixins.scss";
 @import "general/fonts.scss";
 @import "general/scaffolding.scss";
-@import "general/rem-calc";
+@import "general/mixes";
 @import "general/btn";
 @import "general/cookie";
 @import "blocks/block-content";
