--- a/src/pug/sections/_study-work.pug
+++ b/src/pug/sections/_study-work.pug
@@ -57,46 +57,44 @@ mixin table
                 td.table-scroll__cell: a(href="#") Открыть
 
 section.activity-work
-    .activity-work__header
-        h2.activity-work__title Учебная работа
-        span.divider
-        .activity-work__progress
-            .progress
-                .progress-bar(data-progress='75')
-            .progress-info
-    .activity-work__container
-        .activity-work__section.accordeon-section
-            p.activity-work__section-title.accordeon-title Результаты учебной деятельности
-                span.activity-work__section-count 4
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
+    .activity-work__container.container
+        .activity-work__header
+            h2.activity-work__title.title--s Учебная работа
+            span.divider
+            .activity-work__progress
+                .progress
+                    .progress-bar(data-progress='75')
+                .progress-info
+        .activity-work__wrapper
+            .activity-work__section
+                p.activity-work__section-title.accordeon-title Результаты учебной деятельности
+                    span.activity-work__section-count 4
+                button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
 
-    .activity-work__container.activity-work__container
-        .activity-work__section
-            p.activity-work__section-title.accordeon-title Практика обучающегося
-                span.activity-work__section-count 2
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
-    .activity-work__container
-        .activity-work__section
-            p.activity-work__section-title.accordeon-title Стажировки
-                span.activity-work__section-count 10
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
-    .activity-work__container
-        .activity-work__section
-            p.activity-work__section-title.accordeon-title Участие в мероприятиях
-                span.activity-work__section-count 3
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
-    .activity-work__container
-        .activity-work__section
-            p.activity-work__section-title.accordeon-title Дополнительное образование
-                span.activity-work__section-count 1
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
+
+            .activity-work__section
+                p.activity-work__section-title.accordeon-title Практика обучающегося
+                    span.activity-work__section-count 2
+                button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
+            .activity-work__section
+                p.activity-work__section-title.accordeon-title Стажировки
+                    span.activity-work__section-count 10
+                button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
+            .activity-work__section
+                p.activity-work__section-title.accordeon-title Участие в мероприятиях
+                    span.activity-work__section-count 3
+                button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
+            .activity-work__section
+                p.activity-work__section-title.accordeon-title Дополнительное образование
+                    span.activity-work__section-count 1
+                button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
