--- a/src/scss/blocks/_student-news.scss
+++ b/src/scss/blocks/_student-news.scss
@@ -1,6 +1,3 @@
-.student-news {
-  @include container;
-}
 
 .student-news__content {
   display: flex;
@@ -26,7 +23,7 @@
   padding: 4px 9px;
 }
 
-.student-news__container {
+.student-news__wrapper {
   @media (min-width: $tablet) {
 	width: 1003px;
 	display: flex;
